--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -4,16 +4,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ra\u010dunalni\u0161ki vid v robotiki\n",
+        "# Računalniški vid v robotiki\n",
         "\n",
-        "Da uspe\u0161no opravite vajo, jo morate predstaviti asistentu na vajah. Pri nekaterih nalogah so vpra\u0161anja, ki zahtevajo skiciranje, ro\u010dno ra\u010dunanje in razmislek. Kon\u010dno re\u0161itev na tak\u0161na vpra\u0161anja vpi\u0161ite v predvideni prostor, postopek re\u0161evanja pa razlo\u017eite asistentu na vajah. Deli nalog, ki imajo pred navodilom navedene to\u010dke, niso obvezni. Brez njih lahko za celotno vajo dobite najve\u010d **75** to\u010dk (zgornja meja je **100** to\u010dk kar pomeni oceno 10). V nekaterih vajah je dodatnih nalog ve\u010d in vam ni potrebno opraviti vseh."
+        "Da uspešno opravite vajo, jo morate predstaviti asistentu na vajah. Pri nekaterih nalogah so vprašanja, ki zahtevajo skiciranje, ročno računanje in razmislek. Končno rešitev na takšna vprašanja vpišite v predvideni prostor, postopek reševanja pa razložite asistentu na vajah. Deli nalog, ki imajo pred navodilom navedene točke, niso obvezni. Brez njih lahko za celotno vajo dobite največ **75** točk (zgornja meja je **100** točk kar pomeni oceno 10). V nekaterih vajah je dodatnih nalog več in vam ni potrebno opraviti vseh."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Zaklju\u010dna vaja povezuje robotiko in ra\u010dunalni\u0161ko zaznavanje. Va\u0161 robotski sistem boste nadgradili s kamero, ki bo opazovala delovno povr\u0161ino robotskega manipulatorja, preko zajete slike pa boste lahko na povr\u0161ini zaznali objekte glede na njihovo barvo in obliko. Preko homografske preslikave boste to\u010dke iz koordinatnega prostora slike pretvorili v prostor robota ter mu ukazali, naj se premakne tako, da poka\u017ee na ustrezni predmet."
+        "Zaključna vaja povezuje robotiko in računalniško zaznavanje. Vaš robotski sistem boste nadgradili s kamero, ki bo opazovala delovno površino robotskega manipulatorja, preko zajete slike pa boste lahko na površini zaznali objekte glede na njihovo barvo in obliko. Preko homografske preslikave boste točke iz koordinatnega prostora slike pretvorili v prostor robota ter mu ukazali, naj se premakne tako, da pokaže na ustrezni predmet."
       ]
     },
     {
@@ -48,7 +48,7 @@
       "source": [
         "## Naloga 1 - Homografska transformacija\n",
         "\n",
-        "Homografska transformacija je pogosto uporabljana v projektivni geometriji. Predstavlja projekcijo ene ravnine v prostoru na drugo ravnino v prostoru. Naj bo $\\mathbf{x}_w$ to\u010dka na ravnini v svetovnih koordinatah in naj bo $\\mathbf{x}_c$ to\u010dka v koordinatah slikovne ravnine. Natan\u010dneje, $\\mathbf{x}_w=[ x_w, y_w, 1 ]^T$ in $\\mathbf{x}_c=[ x_c, y_c, 1 ]^T$. Projekcijo to\u010dke svetovnih koordinatah $\\mathbf{x}_w$ v to\u010dko $\\mathbf{x}_c$, ki se nahaja na slikovni ravnini senzorja, preslikamo s homografijo $\\mathbf{H}_w^c$ po ena\u010dbi\n",
+        "Homografska transformacija je pogosto uporabljana v projektivni geometriji. Predstavlja projekcijo ene ravnine v prostoru na drugo ravnino v prostoru. Naj bo $\\mathbf{x}_w$ točka na ravnini v svetovnih koordinatah in naj bo $\\mathbf{x}_c$ točka v koordinatah slikovne ravnine. Natančneje, $\\mathbf{x}_w=[ x_w, y_w, 1 ]^T$ in $\\mathbf{x}_c=[ x_c, y_c, 1 ]^T$. Projekcijo točke svetovnih koordinatah $\\mathbf{x}_w$ v točko $\\mathbf{x}_c$, ki se nahaja na slikovni ravnini senzorja, preslikamo s homografijo $\\mathbf{H}_w^c$ po enačbi\n",
         "\n",
         "$$\n",
         "    \\mathbf{x}_c = \\lambda \\mathbf{H}_w^c \\mathbf{x}_w,\n",
@@ -64,7 +64,7 @@
         "\\end{array}} \\right] .\n",
         "$$\n",
         "\n",
-        "Relacija v zgornji ena\u010dbi je zapisana v homogenih koordinatah in je zato napisana le do skale natan\u010dno. V praksi ima matrika $\\mathbf{H}_w^c$ samo 8 *prostih* parametrov in ne 9, saj zadnji element postavimo na ena, $h_{33}=1$. \u010ce ho\u010demo to\u010dke v koordinatah slike $\\mathbf{x}_c$ preslikati v to\u010dko $\\mathbf{x}_c$, ki se nahaja na svetovnih koordinatah, moramo uporabiti inverz homografije $\\mathbf{H}_c^w = (\\mathbf{H}_w^c)^{-1}$.\n",
+        "Relacija v zgornji enačbi je zapisana v homogenih koordinatah in je zato napisana le do skale natančno. V praksi ima matrika $\\mathbf{H}_w^c$ samo 8 *prostih* parametrov in ne 9, saj zadnji element postavimo na ena, $h_{33}=1$. Če hočemo točke v koordinatah slike $\\mathbf{x}_c$ preslikati v točko $\\mathbf{x}_c$, ki se nahaja na svetovnih koordinatah, moramo uporabiti inverz homografije $\\mathbf{H}_c^w = (\\mathbf{H}_w^c)^{-1}$.\n",
         "\n",
         "V naslednjih nalogah boste preizkusili homografsko transformacijo na pripravljenih podatkih."
       ]
@@ -73,7 +73,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Nalo\u017eite sliko iz datoteke ``camera1.jpg`` ter homografsko matriko iz datoteke ``camera1.txt`` z uporabo spodaj prilo\u017eene funkcije ``load_h``. Prika\u017eite sliko ter na njej izri\u0161ite mre\u017eo to\u010dk z desetimi vrsticami in desetimi stolpci."
+        "* Naložite sliko iz datoteke ``camera1.jpg`` ter homografsko matriko iz datoteke ``camera1.txt`` z uporabo spodaj priložene funkcije ``load_h``. Prikažite sliko ter na njej izrišite mrežo točk z desetimi vrsticami in desetimi stolpci."
       ]
     },
     {
@@ -106,7 +106,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Izris spremenite tako, da to\u010dke \u010drt pred izrisom preslikate s prebrano homografsko matriko. Pri tem morate to\u010dke najprej preslikati v homografske koordinate (na konec vektorja dodati vrednost $1$), jo pomno\u017eiti z matriko, nato pa *to\u010dko pretvoriti nazaj iz homogenih koordinat* tako, da vektor delimo z vrednostjo zadnjega elementa ter tega nato odstranimo. Spodaj je prikazan za\u017eeleni rezultat, kjer plava mre\u017ea prikazuje rezultat zgornje naloge, rde\u010da mre\u017ea pa rezultat te naloge.\n",
+        "* Izris spremenite tako, da točke črt pred izrisom preslikate s prebrano homografsko matriko. Pri tem morate točke najprej preslikati v homografske koordinate (na konec vektorja dodati vrednost $1$), jo pomnožiti z matriko, nato pa *točko pretvoriti nazaj iz homogenih koordinat* tako, da vektor delimo z vrednostjo zadnjega elementa ter tega nato odstranimo. Spodaj je prikazan zaželeni rezultat, kjer plava mreža prikazuje rezultat zgornje naloge, rdeča mreža pa rezultat te naloge.\n",
         "\n",
         "\\begin{equation*}\n",
         "p_S = [ x, y, 1 ], \\\\  p_H = H \\ast p_S = [ x_H, y_H, z_H ], \\\\ p_D = \\big[ \\frac{x_H}{z_H}, \\frac{y_H}{z_H} \\big]\n",
@@ -133,7 +133,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Oglejmo si sedaj \u0161e preslikavo v drugo smer. To tehniko lahko uporabimo za preslikavo iz slikovnih koordinat v svetovne koordinate. Matriko $H$ invertirajte z uporabo funkcije ``np.linalg.inv``. Prika\u017eite sliko ter z uporabo funkcije ``ginput`` knji\u017enice *matplotlib* vnesite eno ali ve\u010d to\u010dk s klikom na sliko. Dane to\u010dke preslikajte z uporabo inverza matrike $H$ iz ravnine kamere v svetovne koordinate ter jih prika\u017eite v novem grafu z uporabo funkcije plot.\n",
+        "* Oglejmo si sedaj še preslikavo v drugo smer. To tehniko lahko uporabimo za preslikavo iz slikovnih koordinat v svetovne koordinate. Matriko $H$ invertirajte z uporabo funkcije ``np.linalg.inv``. Prikažite sliko ter z uporabo funkcije ``ginput`` knjižnice *matplotlib* vnesite eno ali več točk s klikom na sliko. Dane točke preslikajte z uporabo inverza matrike $H$ iz ravnine kamere v svetovne koordinate ter jih prikažite v novem grafu z uporabo funkcije plot.\n",
         "\n",
         "![vaja4_naloga1_2.jpg](attachment:vaja4_naloga1_2.jpg)"
       ]
@@ -153,7 +153,7 @@
       "source": [
         "## Naloga 2 - Detekcija objektov\n",
         "\n",
-        "V tej nalogi boste implementirali preprosto detekcijo planarnih objektov z uporabo segmentacije, morfolo\u0161kih operacij ter opisa regij. Sledite naslednjim korakom (*lahko si pomagate z detekcijo bombonov, \u010de ste jo implementirali v okviru druge vaje*)."
+        "V tej nalogi boste implementirali preprosto detekcijo planarnih objektov z uporabo segmentacije, morfoloških operacij ter opisa regij. Sledite naslednjim korakom (*lahko si pomagate z detekcijo bombonov, če ste jo implementirali v okviru druge vaje*)."
       ]
     },
     {
@@ -165,7 +165,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Nalo\u017eite sliko iz datoteke ``camera2.jpg`` ter jo prika\u017eite na zaslonu. Z uporabo funkcije ``ginput`` dolo\u010dite meje poligona delovne povr\u0161ine kot je prikazano na spodnjem primeru. Nato za podane to\u010dke generirajte rastersko masko z uporabo funkcije ``poly2mask``, ki na vhodu sprejme koordinate poligona ter velikost rasteriziranega obmo\u010dja (za la\u017ejo uporabo naj bo ta enaka velikosti slike). \u010ce ste pri drugi vaji implementirali funkcijo ``immask``, jo sedaj uporabite za prikaz izolirane delovne povr\u0161ine.\n",
+        "* Naložite sliko iz datoteke ``camera2.jpg`` ter jo prikažite na zaslonu. Z uporabo funkcije ``ginput`` določite meje poligona delovne površine kot je prikazano na spodnjem primeru. Nato za podane točke generirajte rastersko masko z uporabo funkcije ``poly2mask``, ki na vhodu sprejme koordinate poligona ter velikost rasteriziranega območja (za lažjo uporabo naj bo ta enaka velikosti slike). Če ste pri drugi vaji implementirali funkcijo ``immask``, jo sedaj uporabite za prikaz izolirane delovne površine.\n",
         "\n",
         "![vaja4_naloga2_1.jpg](attachment:vaja4_naloga2_1.jpg)"
       ]
@@ -200,7 +200,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Sliko pogleda kamere pretvorite v HSV barvni prostor ter z uporabo upragovanja dolo\u010dite regije modre barve. Po potrebi segmentacijo izbolj\u0161ajte z uporabo morfolo\u0161kih operacij *erode* in *dilate*, da se znebite \u0161uma. Kon\u010dno binarno masko zdru\u017eite z masko delovne povr\u0161ine, da odstranite morebitne napa\u010dne detekcije."
+        "* Sliko pogleda kamere pretvorite v HSV barvni prostor ter z uporabo upragovanja določite regije modre barve. Po potrebi segmentacijo izboljšajte z uporabo morfoloških operacij *erode* in *dilate*, da se znebite šuma. Končno binarno masko združite z masko delovne površine, da odstranite morebitne napačne detekcije."
       ]
     },
     {
@@ -221,7 +221,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Masko razdelite na posamezne komponente. Za vsako komponento izra\u010dunajte centroid, ki jih nato prika\u017eite kot to\u010dke na izvorni sliki iz datoteke ``camera2.jpg``.\n",
+        "* Masko razdelite na posamezne komponente. Za vsako komponento izračunajte centroid, ki jih nato prikažite kot točke na izvorni sliki iz datoteke ``camera2.jpg``.\n",
         "\n",
         "![vaja4_naloga2_2.jpg](attachment:vaja4_naloga2_2.jpg)"
       ]
@@ -241,14 +241,14 @@
       "source": [
         "## Naloga 3 - Krmiljenje robotskega manipulatorja\n",
         "\n",
-        "Ta naloga zdru\u017eeje vse znanje pridobljeno tekom prvih treh nalog. Za to nalogo morate imeti vzpostavljno virtualno okolje za uporabo manipulatorja."
+        "Ta naloga združeje vse znanje pridobljeno tekom prvih treh nalog. Za to nalogo morate imeti vzpostavljno virtualno okolje za uporabo manipulatorja."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Vzpostavite sistem za dostop do manipulatorja in kamere. Preu\u010dite skripto ``manus.py`` (osredoto\u010dite se predvsem na class *Camera* ter funkciji ``position`` in ``image``) in si oglajte spodaj prilo\u017eeno kodo, ki demonstrira kako lahko iz kamere na robotskem manipulatorju pridobimo sliko ter jo prika\u017eemo na zaslonu."
+        "* Vzpostavite sistem za dostop do manipulatorja in kamere. Preučite skripto ``manus.py`` (osredotočite se predvsem na class *Camera* ter funkciji ``position`` in ``image``) in si oglajte spodaj priloženo kodo, ki demonstrira kako lahko iz kamere na robotskem manipulatorju pridobimo sliko ter jo prikažemo na zaslonu."
       ]
     },
     {
@@ -277,7 +277,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Z uporabo prilo\u017eene funkcije ``get_homography_matrix`` preberite homografsko matriko. Homografsko matriko uporabite za izris kvadrata z $(x, y)$ koordinatami $(100, -200)$, $(100, 200)$, $(300, 200)$, $(300, -200)$ v svetovnem koordinatnem sistemu delovne ravnine.\n",
+        "* Z uporabo priložene funkcije ``get_homography_matrix`` preberite homografsko matriko. Homografsko matriko uporabite za izris kvadrata z $(x, y)$ koordinatami $(100, -200)$, $(100, 200)$, $(300, 200)$, $(300, -200)$ v svetovnem koordinatnem sistemu delovne ravnine.\n",
         "\n",
         "![vaja4_naloga3_2.jpg](attachment:vaja4_naloga3_2.jpg)"
       ]
@@ -315,7 +315,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Skripto raz\u0161irite tako, da bo na sliki zaznala modre kocke ter prikazala njihove centroide. Po potrebi lahko dolo\u010dite tudi masko delovne povr\u0161ine (ker je kamera v scenariju stati\u010dna, lahko to masko dolo\u010dite enkrat ter jo potem uporabljate ve\u010dkrat)."
+        "* Skripto razširite tako, da bo na sliki zaznala modre kocke ter prikazala njihove centroide. Po potrebi lahko določite tudi masko delovne površine (ker je kamera v scenariju statična, lahko to masko določite enkrat ter jo potem uporabljate večkrat)."
       ]
     },
     {
@@ -336,7 +336,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Preslikajte vse to\u010dke iz koordinatnega sistema kamere v koordinatni sistem delovne povr\u0161ine. V zanki potujte preko seznama to\u010dk ter manipulator premikajte tako, da bo s koncem prijemala pokazal na posamezni zaznani objekt na delovni povr\u0161ini. Ker v $3D$ prostoru robotskega manipulatorja zaznane to\u010dke le\u017eijo na delovni povr\u0161ini (koordinata v smeri $z$ je $0$) kot take niso neposredno primerne za podajanje cilja robotskemu manipulatorju. Zato to\u010dko preoblikujte tako, da ji podate novo vi\u0161ino od delovne povr\u0161ine (npr. $z = 30$). Take to\u010dke bodo od ravnine oddaljene 3 cm.\n",
+        "* Preslikajte vse točke iz koordinatnega sistema kamere v koordinatni sistem delovne površine. V zanki potujte preko seznama točk ter manipulator premikajte tako, da bo s koncem prijemala pokazal na posamezni zaznani objekt na delovni površini. Ker v $3D$ prostoru robotskega manipulatorja zaznane točke ležijo na delovni površini (koordinata v smeri $z$ je $0$) kot take niso neposredno primerne za podajanje cilja robotskemu manipulatorju. Zato točko preoblikujte tako, da ji podate novo višino od delovne površine (npr. $z = 30$). Take točke bodo od ravnine oddaljene 3 cm.\n",
         "\n",
         "![img43.JPG](attachment:img43.JPG)"
       ]
@@ -354,7 +354,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Raz\u0161irite detekcijo objektov tako, da bo zaznala kocke dveh barv, modre in \u010drne. Manipulator naj nato poka\u017ee vse zaznane modre kocke z zaprtim prijemalom, nato pa \u0161e \u010drne kocke z odprtim prijemalom."
+        "* Razširite detekcijo objektov tako, da bo zaznala kocke dveh barv, modre in črne. Manipulator naj nato pokaže vse zaznane modre kocke z zaprtim prijemalom, nato pa še črne kocke z odprtim prijemalom."
       ]
     },
     {
@@ -370,7 +370,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* **(5 to\u010dk)** Napi\u0161ite algoritem, ki bo krmilil manipulator tako, da bo sledil izbranemu predmetu preko kamere. Pri tem lahko predpostavite, da je predmet blizu delovne povr\u0161ine (z = 0), lahko si tudi izberete njegovo barvo ali druge lastnosti."
+        "* **(5 točk)** Napišite algoritem, ki bo krmilil manipulator tako, da bo sledil izbranemu predmetu preko kamere. Pri tem lahko predpostavite, da je predmet blizu delovne površine (z = 0), lahko si tudi izberete njegovo barvo ali druge lastnosti."
       ]
     },
     {
@@ -386,7 +386,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* **(10 to\u010dk)** Prilagodite algoritem iz prej\u0161njih to\u010dk tako, da bo manipulator zaznane kocke dveh barv (si lahko izberete vnaprej), ki so na za\u010detku razporejene naklju\u010dno, razporedil glede na barvo na levo in desno stran delovne povr\u0161ine. Pri tem bodite pozorni, da kocke ne bodo postavljene ena \u010dez drugo."
+        "* **(10 točk)** Prilagodite algoritem iz prejšnjih točk tako, da bo manipulator zaznane kocke dveh barv (si lahko izberete vnaprej), ki so na začetku razporejene naključno, razporedil glede na barvo na levo in desno stran delovne površine. Pri tem bodite pozorni, da kocke ne bodo postavljene ena čez drugo."
       ]
     },
     {
@@ -402,13 +402,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* **(10 to\u010dk)** Prilagodite algoritem iz prej\u0161njih to\u010dk tako, da bo manipulator zaznane kocke (vsaj \u0161tiri kocke) zlo\u017eil eno na drugo v stolp. "
+        "* **(10 točk)** Prilagodite algoritem iz prejšnjih točk tako, da bo manipulator zaznane kocke (vsaj štiri kocke) zložil eno na drugo v stolp. "
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3.8.10 ('rrz')",
+      "display_name": "venvR04",
       "language": "python",
       "name": "python3"
     },
@@ -422,11 +422,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "7fc2b049be26a0a7bc80520fa9c82ac38bccc829b02a71082c4c7d5fa46b7c82"
+        "hash": "5a1ee88120da9d9e036b50c9c64cd69d970081fbd3df65582e17c3553c62bcb0"
       }
     }
   },
