--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -439,7 +439,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venvR04",
       "language": "python",
       "name": "python3"
     },
@@ -453,11 +453,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0"
+      "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "28bb54fccb5c54b9eedc5af22a7a634d0c6fe20678618892aea914a85c0bb8f1"
+        "hash": "5a1ee88120da9d9e036b50c9c64cd69d970081fbd3df65582e17c3553c62bcb0"
       }
     }
   },
