--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -18,21 +18,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 47,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'manus'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn [1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcv2\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmanus\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'manus'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import cv2\n",
         "import manus\n",
@@ -45,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -102,30 +90,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 50,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'np' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn [3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# TODO\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m koordinate \u001b[39m=\u001b[39m load_h(\u001b[39m\"\u001b[39;49m\u001b[39mdata/camera1.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      3\u001b[0m image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mimread(\u001b[39m\"\u001b[39m\u001b[39mdata/camera1.jpg\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m plt\u001b[39m.\u001b[39mimshow(image)\n",
-            "Cell \u001b[1;32mIn [2], line 4\u001b[0m, in \u001b[0;36mload_h\u001b[1;34m(txt_file_path)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(txt_file_path, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     l \u001b[39m=\u001b[39m [[\u001b[39mfloat\u001b[39m(num) \u001b[39mfor\u001b[39;00m num \u001b[39min\u001b[39;00m line\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)] \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m f]    \n\u001b[1;32m----> 4\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray(l)\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# TODO\n",
         "koordinate = load_h(\"data/camera1.txt\")\n",
-        "image = cv2.imread(\"data/camera1.jpg\")\n",
+        "image1 = cv2.imread(\"data/camera1.jpg\")\n",
+        "\n",
+        "x = [i * (int)(image1.shape[1]/20) for i in range(10)]\n",
+        "y = [i * (int)(image1.shape[0]/20) for i in range(10)]\n",
+        "\n",
+        "plt.imshow(image1, cmap=None)\n",
+        "\n",
+        "for i in range(10):\n",
+        "    plt.plot([x[i], x[i]], [0, image1.shape[0] - 1], color=\"blue\")\n",
+        "\n",
+        "for i in range(10):\n",
+        "    plt.plot([0, image1.shape[1] - 1], [y[i], y[i]], color=\"blue\")\n",
         "\n",
         "\n",
-        "\n",
-        "plt.imshow(image)"
+        "plt.show()"
       ]
     },
     {
@@ -148,11 +133,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(255, 212)"
+            ]
+          },
+          "execution_count": 51,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# TODO"
+        "# TODO\n",
+        "# Funkcija ti pomaga pri izračunu koordinat zgornja formula\n",
+        "def help_function(H, vector):\n",
+        "    result = np.matmul(H, vector)\n",
+        "    return ((int)(result[0][0] / result[2][0]), (int)(result[1][0] / result[2][0]))\n",
+        "\n",
+        "\n",
+        "vS = []\n",
+        "vE = []\n",
+        "hS = []\n",
+        "hE = []\n",
+        "\n",
+        "vectorXS = [[x[i]], [0], [1]]\n",
+        "help_function(koordinate, vectorXS)\n",
+        "\n",
+        "# for i in range(10):\n",
+        "#     vectorXS = [[x[i]], [0], [1]]\n",
+        "#     vectorXE = [[x[i]], [image1.shape[0] - 1], [1]]\n",
+        "#     vectorYS = [[0], [y[i]], [1]]\n",
+        "#     vectorYE = [[image1.shape[1] - 1], [y[i]], [1]]\n",
+        "#     vS.append(help_function(koordinate, vectorXS))\n",
+        "#     vE.append(help_function(koordinate, vectorXE))\n",
+        "#     hS.append(help_function(koordinate, vectorYS))\n",
+        "#     hE.append(help_function(koordinate, vectorYE))\n",
+        "\n"
       ]
     },
     {
@@ -171,11 +191,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO"
+        "# TODO\n",
+        "import matplotlib\n",
+        "matplotlib.use('TkAgg')\n",
+        "inverz = np.linalg.inv(koordinate)\n",
+        "\n",
+        "plt.figure(0)\n",
+        "\n",
+        "plt.title(\"ginput image\", fontweight =\"bold\")\n",
+        "plt.imshow(image1)\n",
+        "x = plt.ginput(8, timeout=-1, show_clicks=True, mouse_add=1, mouse_pop=3, mouse_stop=2)\n",
+        "for point in x:\n",
+        "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
+        "\n",
+        "plt.figure(1)\n",
+        "points = []\n",
+        "for point in x:\n",
+        "    points.append(help_function(inverz, [[point[0]], [point[1]], [1]]))\n",
+        "    \n",
+        "for point in points:\n",
+        "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
+        "plt.show()"
       ]
     },
     {
@@ -205,7 +245,19 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'skimage'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mskimage\u001b[39;00m \u001b[39mimport\u001b[39;00m draw\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpoly2mask\u001b[39m(y_coords, x_coords, shape):\n\u001b[0;32m      3\u001b[0m     \u001b[39m# y_coord = y koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[39m# x_coord = x koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[39m# shape = dimenzije maske (height, weight)\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     fill_row_coords, fill_col_coords \u001b[39m=\u001b[39m draw\u001b[39m.\u001b[39mpolygon(y_coords, x_coords, shape)\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
+          ]
+        }
+      ],
       "source": [
         "from skimage import draw\n",
         "def poly2mask(y_coords, x_coords, shape):\n",
@@ -453,7 +505,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+      "version": "3.11.0"
     },
     "vscode": {
       "interpreter": {
