--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -142,7 +142,7 @@
               "(255, 212)"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -201,7 +201,6 @@
         "inverz = np.linalg.inv(koordinate)\n",
         "\n",
         "plt.figure(0)\n",
-        "\n",
         "plt.title(\"ginput image\", fontweight =\"bold\")\n",
         "plt.imshow(image1)\n",
         "x = plt.ginput(8, timeout=-1, show_clicks=True, mouse_add=1, mouse_pop=3, mouse_stop=2)\n",
@@ -243,21 +242,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'skimage'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mskimage\u001b[39;00m \u001b[39mimport\u001b[39;00m draw\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpoly2mask\u001b[39m(y_coords, x_coords, shape):\n\u001b[0;32m      3\u001b[0m     \u001b[39m# y_coord = y koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[39m# x_coord = x koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[39m# shape = dimenzije maske (height, weight)\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     fill_row_coords, fill_col_coords \u001b[39m=\u001b[39m draw\u001b[39m.\u001b[39mpolygon(y_coords, x_coords, shape)\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from skimage import draw\n",
         "def poly2mask(y_coords, x_coords, shape):\n",
@@ -272,11 +259,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO"
+        "# TODO\n",
+        "image2 = cv2.imread(\"data/camera2.jpg\")\n",
+        "image2 = cv2.cvtColor(image2, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "matplotlib.use('TkAgg')\n",
+        "\n",
+        "plt.figure(0)\n",
+        "plt.title(\"ginput image\", fontweight =\"bold\")\n",
+        "plt.imshow(image2)\n",
+        "x = plt.ginput(4, timeout=-1, show_clicks=True, mouse_add=1, mouse_pop=3, mouse_stop=2)\n",
+        "for point in x:\n",
+        "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
+        "\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "img = np.zeros((10, 10), dtype=np.uint8)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[237.42207792 122.0974026 ]\n",
+            " [405.73376623 117.94155844]]\n",
+            "[[409.88961039 309.11038961]\n",
+            " [221.83766234 324.69480519]]\n"
+          ]
+        },
+        {
+          "ename": "ValueError",
+          "evalue": "Buffer has wrong number of dimensions (expected 1, got 2)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[62], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(y_koor)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(x_koor)\n\u001b[1;32m----> 8\u001b[0m mask \u001b[39m=\u001b[39m poly2mask(x_koor, y_koor, gray\u001b[39m.\u001b[39;49mshape)\n\u001b[0;32m      9\u001b[0m \u001b[39m#mask\u001b[39;00m\n",
+            "Cell \u001b[1;32mIn[61], line 6\u001b[0m, in \u001b[0;36mpoly2mask\u001b[1;34m(y_coords, x_coords, shape)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpoly2mask\u001b[39m(y_coords, x_coords, shape):\n\u001b[0;32m      3\u001b[0m     \u001b[39m# y_coord = y koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[39m# x_coord = x koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[39m# shape = dimenzije maske (height, weight)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m     fill_row_coords, fill_col_coords \u001b[39m=\u001b[39m draw\u001b[39m.\u001b[39;49mpolygon(y_coords, x_coords, shape)\n\u001b[0;32m      7\u001b[0m     mask \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(shape, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mbool)\n\u001b[0;32m      8\u001b[0m     mask[fill_row_coords, fill_col_coords] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
+            "File \u001b[1;32md:\\Faks\\Robotika04\\venvR04\\lib\\site-packages\\skimage\\draw\\draw.py:481\u001b[0m, in \u001b[0;36mpolygon\u001b[1;34m(r, c, shape)\u001b[0m\n\u001b[0;32m    437\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpolygon\u001b[39m(r, c, shape\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m    438\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Generate coordinates of pixels within polygon.\u001b[39;00m\n\u001b[0;32m    439\u001b[0m \n\u001b[0;32m    440\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    479\u001b[0m \n\u001b[0;32m    480\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 481\u001b[0m     \u001b[39mreturn\u001b[39;00m _polygon(r, c, shape)\n",
+            "File \u001b[1;32md:\\Faks\\Robotika04\\venvR04\\lib\\site-packages\\skimage\\draw\\_draw.pyx:231\u001b[0m, in \u001b[0;36mskimage.draw._draw._polygon\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;31mValueError\u001b[0m: Buffer has wrong number of dimensions (expected 1, got 2)"
+          ]
+        }
+      ],
+      "source": [
+        "gray = cv2.cvtColor(image2, cv2.COLOR_BGR2GRAY)\n",
+        "y_koor = np.array([x[0], x[1]])\n",
+        "x_koor = np.array([x[2], x[3]])\n",
+        "\n",
+        "print(y_koor)\n",
+        "print(x_koor)\n",
+        "\n",
+        "mask = poly2mask(x_koor, y_koor, gray.shape)\n",
+        "#mask"
       ]
     },
     {
@@ -288,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -311,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -336,9 +387,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "module 'manus' has no attribute 'Server'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m server \u001b[39m=\u001b[39m manus\u001b[39m.\u001b[39;49mServer(address\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m192.168.56.101\u001b[39m\u001b[39m'\u001b[39m, port\u001b[39m=\u001b[39m\u001b[39m80\u001b[39m)\n\u001b[0;32m      3\u001b[0m camera \u001b[39m=\u001b[39m manus\u001b[39m.\u001b[39mCamera(server)\n\u001b[0;32m      4\u001b[0m img \u001b[39m=\u001b[39m camera\u001b[39m.\u001b[39mimage()\n",
+            "\u001b[1;31mAttributeError\u001b[0m: module 'manus' has no attribute 'Server'"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "server = manus.Server(address='192.168.56.101', port=80)\n",
         "\n",
@@ -505,7 +576,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0"
+      "version": "3.10.0"
     },
     "vscode": {
       "interpreter": {
