--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -215,6 +215,24 @@
         "for point in points:\n",
         "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "'break' outside loop (668683560.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    break\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'break' outside loop\n"
+          ]
+        }
+      ],
+      "source": [
+        "break"
       ]
     },
     {
@@ -242,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -259,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -280,57 +298,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 55,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "img = np.zeros((10, 10), dtype=np.uint8)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 62,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[[237.42207792 122.0974026 ]\n",
-            " [405.73376623 117.94155844]]\n",
-            "[[409.88961039 309.11038961]\n",
-            " [221.83766234 324.69480519]]\n"
-          ]
-        },
-        {
-          "ename": "ValueError",
-          "evalue": "Buffer has wrong number of dimensions (expected 1, got 2)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[62], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(y_koor)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(x_koor)\n\u001b[1;32m----> 8\u001b[0m mask \u001b[39m=\u001b[39m poly2mask(x_koor, y_koor, gray\u001b[39m.\u001b[39;49mshape)\n\u001b[0;32m      9\u001b[0m \u001b[39m#mask\u001b[39;00m\n",
-            "Cell \u001b[1;32mIn[61], line 6\u001b[0m, in \u001b[0;36mpoly2mask\u001b[1;34m(y_coords, x_coords, shape)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpoly2mask\u001b[39m(y_coords, x_coords, shape):\n\u001b[0;32m      3\u001b[0m     \u001b[39m# y_coord = y koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[39m# x_coord = x koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[39m# shape = dimenzije maske (height, weight)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m     fill_row_coords, fill_col_coords \u001b[39m=\u001b[39m draw\u001b[39m.\u001b[39;49mpolygon(y_coords, x_coords, shape)\n\u001b[0;32m      7\u001b[0m     mask \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(shape, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mbool)\n\u001b[0;32m      8\u001b[0m     mask[fill_row_coords, fill_col_coords] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-            "File \u001b[1;32md:\\Faks\\Robotika04\\venvR04\\lib\\site-packages\\skimage\\draw\\draw.py:481\u001b[0m, in \u001b[0;36mpolygon\u001b[1;34m(r, c, shape)\u001b[0m\n\u001b[0;32m    437\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpolygon\u001b[39m(r, c, shape\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m    438\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Generate coordinates of pixels within polygon.\u001b[39;00m\n\u001b[0;32m    439\u001b[0m \n\u001b[0;32m    440\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    479\u001b[0m \n\u001b[0;32m    480\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 481\u001b[0m     \u001b[39mreturn\u001b[39;00m _polygon(r, c, shape)\n",
-            "File \u001b[1;32md:\\Faks\\Robotika04\\venvR04\\lib\\site-packages\\skimage\\draw\\_draw.pyx:231\u001b[0m, in \u001b[0;36mskimage.draw._draw._polygon\u001b[1;34m()\u001b[0m\n",
-            "\u001b[1;31mValueError\u001b[0m: Buffer has wrong number of dimensions (expected 1, got 2)"
-          ]
-        }
-      ],
-      "source": [
-        "gray = cv2.cvtColor(image2, cv2.COLOR_BGR2GRAY)\n",
-        "y_koor = np.array([x[0], x[1]])\n",
-        "x_koor = np.array([x[2], x[3]])\n",
-        "\n",
-        "print(y_koor)\n",
-        "print(x_koor)\n",
-        "\n",
-        "mask = poly2mask(x_koor, y_koor, gray.shape)\n",
-        "#mask"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -339,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -362,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -387,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -576,7 +543,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
+      "version": "3.10.0"
     },
     "vscode": {
       "interpreter": {
