--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 238,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 239,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 189,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -270,14 +270,14 @@
         "    # x_coord = x koordinate poligona (vrstni red je pomemben!)\n",
         "    # shape = dimenzije maske (height, weight)\n",
         "    fill_row_coords, fill_col_coords = draw.polygon(y_coords, x_coords, shape)\n",
-        "    mask = np.zeros(shape, dtype=np.bool)\n",
+        "    mask = np.zeros(shape, dtype=np.uint8)\n",
         "    mask[fill_row_coords, fill_col_coords] = True\n",
         "    return mask"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 367,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -290,10 +290,35 @@
         "plt.figure(0)\n",
         "plt.title(\"ginput image\", fontweight =\"bold\")\n",
         "plt.imshow(image2)\n",
-        "x = plt.ginput(4, timeout=-1, show_clicks=True, mouse_add=1, mouse_pop=3, mouse_stop=2)\n",
+        "x = plt.ginput(4, timeout=-1, show_clicks=True)\n",
         "for point in x:\n",
         "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
         "\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 368,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "image2 = cv2.imread(\"data/camera2.jpg\")\n",
+        "image2 = cv2.cvtColor(image2, cv2.COLOR_BGR2RGB)\n",
+        "grayImage = cv2.cvtColor(image2, cv2.COLOR_BGR2GRAY)\n",
+        "r = np.array([x[1][1], x[0][1], x[2][1], x[3][1]])\n",
+        "c = np.array([x[0][0], x[1][0], x[2][0], x[3][0]])\n",
+        "\n",
+        "mask = poly2mask(r, c, grayImage.shape)\n",
+        "masked = cv2.bitwise_and(image2, image2, mask=mask)\n",
+        "\n",
+        "plt.figure(figsize=(10,3))\n",
+        "plt.subplot(1,3,1)\n",
+        "plt.imshow(image2)\n",
+        "plt.subplot(1,3,2)\n",
+        "plt.imshow(mask, cmap=\"gray\")\n",
+        "plt.subplot(1,3,3)\n",
+        "plt.imshow(masked, cmap=\"gray\")\n",
         "plt.show()"
       ]
     },
@@ -306,11 +331,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 399,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO"
+        "image2 = cv2.imread(\"data/camera2.jpg\")\n",
+        "hsv = cv2.cvtColor(image2, cv2.COLOR_BGR2HSV)\n",
+        "rgb = cv2.cvtColor(image2, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "blue_lower=np.array([100,150,0],np.uint8)\n",
+        "blue_upper=np.array([140,255,255],np.uint8)\n",
+        "\n",
+        "mask = cv2.inRange(hsv,blue_lower,blue_upper)\n",
+        "masked = cv2.bitwise_and(rgb, rgb, mask=mask)\n",
+        "\n",
+        "plt.imshow(masked)\n",
+        "plt.show()"
       ]
     },
     {
@@ -329,11 +365,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 391,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO"
+        "# TODO\n",
+        "image2 = cv2.imread(\"data/camera2.jpg\")\n",
+        "hsv = cv2.cvtColor(image2 ,cv2.COLOR_BGR2HSV)\n",
+        "rgb = cv2.cvtColor(image2 ,cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "lower_blue = np.array([100,150,0])\n",
+        "upper_blue = np.array([140,255,255])\n",
+        "mask = poly2mask(r, c, grayImage.shape)\n",
+        "masked = cv2.bitwise_and(image2, image2, mask=mask)\n",
+        "\n",
+        "masked = cv2.cvtColor(masked ,cv2.COLOR_BGR2HSV)\n",
+        "mask = cv2.inRange(masked, lower_blue,upper_blue)\n",
+        "\n",
+        "result = cv2.bitwise_and(rgb, rgb, mask=mask)\n",
+        "result = cv2.cvtColor(result ,cv2.COLOR_RGB2GRAY)\n",
+        "binary_image_out = cv2.connectedComponentsWithStats(result, 8)\n",
+        "\n",
+        "f, plot = plt.subplots(1)\n",
+        "plot.imshow(rgb, cmap=\"gray\")\n",
+        "\n",
+        "sredisce = binary_image_out[3]\n",
+        "for i in range(1, len(binary_image_out[3])):\n",
+        "    plt.scatter(sredisce[i][0], sredisce[i][1], color=\"red\", marker=\"x\")\n",
+        "\n",
+        "plt.show()"
       ]
     },
     {
@@ -354,39 +414,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 405,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "module 'manus' has no attribute 'Server'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m server \u001b[39m=\u001b[39m manus\u001b[39m.\u001b[39;49mServer(address\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m192.168.56.101\u001b[39m\u001b[39m'\u001b[39m, port\u001b[39m=\u001b[39m\u001b[39m80\u001b[39m)\n\u001b[0;32m      3\u001b[0m camera \u001b[39m=\u001b[39m manus\u001b[39m.\u001b[39mCamera(server)\n\u001b[0;32m      4\u001b[0m img \u001b[39m=\u001b[39m camera\u001b[39m.\u001b[39mimage()\n",
-            "\u001b[1;31mAttributeError\u001b[0m: module 'manus' has no attribute 'Server'"
-          ]
-        },
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "server = manus.Server(address='192.168.56.101', port=80)\n",
+        "#server = manus.Server(address='192.168.56.102', port=80)\n",
         "\n",
-        "camera = manus.Camera(server)\n",
-        "img = camera.image()\n",
-        "\n",
-        "print(img)\n",
+        "#camera = manus.Camera(server)\n",
+        "#img = camera.image()\n",
+        "img = cv2.imread(\"slike/slika1.jpeg\")\n",
         "\n",
         "plt.figure()\n",
-        "plt.imshow(img[0])"
+        "plt.imshow(img[0])\n",
+        "plt.show()"
       ]
     },
     {
@@ -416,9 +456,9 @@
         "    translation_vector = camera_position[1]\n",
         "    \n",
         "    transform = np.hstack((rotation_matrix, np.transpose(translation_vector)))\n",
-        "    projective = np.matmul(intrinsics, transform);\n",
-        "    homography = projective[:, [0, 1, 3]];\n",
-        "    homography /= homography[2, 2];\n",
+        "    projective = np.matmul(intrinsics, transform)\n",
+        "    homography = projective[:, [0, 1, 3]]\n",
+        "    homography /= homography[2, 2]\n",
         "    \n",
         "    return homography"
       ]
