--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -105,8 +105,6 @@
         "\n",
         "for i in range(10):\n",
         "    plt.plot([x[i], x[i]], [0, image1.shape[0] - 1], color=\"blue\")\n",
-        "\n",
-        "for i in range(10):\n",
         "    plt.plot([0, image1.shape[1] - 1], [y[i], y[i]], color=\"blue\")\n",
         "\n",
         "\n",
@@ -133,7 +131,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Funkcija ti pomaga pri izračunu koordinat zgornja formula\n",
+        "def help_function(H, vector):\n",
+        "    result = np.matmul(H, vector)\n",
+        "    return ((int)(result[0][0] / result[2][0]), (int)(result[1][0] / result[2][0]))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -142,26 +152,18 @@
               "(255, 212)"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# TODO\n",
-        "# Funkcija ti pomaga pri izračunu koordinat zgornja formula\n",
-        "def help_function(H, vector):\n",
-        "    result = np.matmul(H, vector)\n",
-        "    return ((int)(result[0][0] / result[2][0]), (int)(result[1][0] / result[2][0]))\n",
-        "\n",
-        "\n",
         "vS = []\n",
         "vE = []\n",
         "hS = []\n",
         "hE = []\n",
         "\n",
-        "vectorXS = [[x[i]], [0], [1]]\n",
-        "help_function(koordinate, vectorXS)\n",
         "\n",
         "# for i in range(10):\n",
         "#     vectorXS = [[x[i]], [0], [1]]\n",
@@ -191,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -200,39 +202,21 @@
         "matplotlib.use('TkAgg')\n",
         "inverz = np.linalg.inv(koordinate)\n",
         "\n",
-        "plt.figure(0)\n",
-        "plt.title(\"ginput image\", fontweight =\"bold\")\n",
-        "plt.imshow(image1)\n",
-        "x = plt.ginput(8, timeout=-1, show_clicks=True, mouse_add=1, mouse_pop=3, mouse_stop=2)\n",
-        "for point in x:\n",
-        "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
+        "plt.figure()\n",
+        "plt.imshow(image1, cmap=None)\n",
+        "x = plt.ginput(6)\n",
         "\n",
-        "plt.figure(1)\n",
-        "points = []\n",
+        "plt.figure()\n",
+        "points_x = []\n",
+        "points_y = []\n",
         "for point in x:\n",
-        "    points.append(help_function(inverz, [[point[0]], [point[1]], [1]]))\n",
-        "    \n",
-        "for point in points:\n",
-        "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "'break' outside loop (668683560.py, line 1)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    break\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'break' outside loop\n"
-          ]
-        }
-      ],
-      "source": [
-        "break"
+        "    x, y = help_function(inverz, [[point[0]], [point[1]], [1]])\n",
+        "    points_x.append(x)\n",
+        "    points_y.append(y)\n",
+        "\n",
+        "plt.scatter(points_x, points_y, color=\"red\", marker=\"x\")\n",
+        "plt.show()\n",
+        "plt.close('all')"
       ]
     },
     {
@@ -260,11 +244,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "from skimage import draw\n",
+        "\n",
         "def poly2mask(y_coords, x_coords, shape):\n",
         "    # y_coord = y koordinate poligona (vrstni red je pomemben!)\n",
         "    # x_coord = x koordinate poligona (vrstni red je pomemben!)\n",
@@ -277,11 +262,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 367,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# TODO\n",
+        "import matplotlib\n",
+        "matplotlib.use('TkCairo')\n",
         "image2 = cv2.imread(\"data/camera2.jpg\")\n",
         "image2 = cv2.cvtColor(image2, cv2.COLOR_BGR2RGB)\n",
         "\n",
@@ -294,12 +281,33 @@
         "for point in x:\n",
         "    plt.scatter(point[0], point[1], color=\"red\", marker=\"x\")\n",
         "\n",
-        "plt.show()"
+        "plt.show()\n",
+        "plt.close('all')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 368,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grayImage = cv2.cvtColor(image2, cv2.COLOR_BGR2GRAY)\n",
+        "r = np.array([x[1][1], x[0][1], x[2][1], x[3][1]])\n",
+        "c = np.array([x[0][0], x[1][0], x[2][0], x[3][0]])\n",
+        "\n",
+        "mask = poly2mask(r, c, grayImage.shape)\n",
+        "masked = cv2.bitwise_and(image2, image2, mask=mask)\n",
+        "\n",
+        "plt.figure(1)\n",
+        "plt.subplot(1,2,1)\n",
+        "plt.imshow(mask, cmap=\"gray\")\n",
+        "plt.subplot(1,2,2)\n",
+        "plt.imshow(masked, cmap=\"gray\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -331,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 399,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -365,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 391,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -414,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 405,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -569,7 +577,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "venvR04",
+      "display_name": "venv04",
       "language": "python",
       "name": "python3"
     },
@@ -583,11 +591,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0"
+      "version": "3.11.0"
     },
     "vscode": {
       "interpreter": {
-        "hash": "5a1ee88120da9d9e036b50c9c64cd69d970081fbd3df65582e17c3553c62bcb0"
+        "hash": "9b408a10ebd1b68a13b88e6f2301e3c2a8d1e0cd799808b334435d4be49d054b"
       }
     }
   },
